--- a/coopRewards.xhtml
+++ b/coopRewards.xhtml
@@ -22,38 +22,59 @@
                      listener="#{infoData.init()}"/>
 
             <f:event type="preRenderView"
-                     listener="#{coopRewardsServicesModel.init()}"/>
+                     listener="#{coopRewardsInputModel.init()}"/>
+
             <f:event type="preRenderView"
                      listener="#{controllerCoopRewards.init()}"/>
-
+            <prcc:growl/>
             <h:form id="accessMessage" 
                     rendered="#{not portalData.showContent}">
                 <h:outputText value="#{portalData.message}"/>
             </h:form>
-
             <h:form id="indexForm" 
                     rendered="#{portalData.showContent}">
+
                 <div class="ui-grid ui-grid-responsive">
-
                     <prcc:confirmDialog/>
-
                     <prcc:ajaxStatus/>
-
                     <prcc:growl/>
-                    <p:panel>
+
+                    <p:panel style="margin-left: 2rem;border: none">
+                        <div class="ui-grid-row">
+                            <div class="ui-grid-col-1">
+                                <p:outputLabel id="renderMem"
+                                               value="#{coopRewardsInputModel.accountNo eq null ? '' : coopRewardsInputModel.coopRewardsView.name eq 'Non-Member' ? 'Non-Member' : 'Member'}"
+                                               style="#{coopRewardsInputModel.accountNo eq null ? 'background-color:white' : coopRewardsInputModel.coopRewardsView.name eq 'Non-Member' ? 'background-color:yellow' : 'background-color:green;color:whitesmoke'}"
+                                               rendered="#{coopRewardsInputModel.accountNo eq null}"/>
+
+
+
+                            </div>
+                            <div class="ui-grid-col-2">
+                                <p:outputLabel id="output" 
+                                               value="#{coopRewardsInputModel.coopRewardsView.name}" 
+                                               style="width: 315px">
+                                </p:outputLabel>
+                            </div>
+
+                        </div>
 
                         <div class="ui-grid-row">  
-                            <div class="ui-grid-col-2">
+                            <div class="ui-grid-col-1">
                                 <p:outputLabel value="Account no. :"/>
                             </div>
                             <div class="ui-grid-col-2">
-                                <p:inputText  
-                                    value="#{coopRewardsInputModel.accountNo}">
+                                <p:inputText  id="accountNoField"
+                                              value="#{coopRewardsInputModel.accountNo}" >
+                                    <p:ajax event="change"
+                                            process="@this"
+                                            update="@this,:#{p:component('clear')},:#{p:component('output')},:#{p:component('submitButton')},:#{p:component('renderMem')}"
+                                            listener="#{controllerCoopRewards.checkAcctno()}"/>
                                 </p:inputText>
                             </div>
                         </div>
                         <div class="ui-grid-row">
-                            <div class="ui-grid-col-2">
+                            <div class="ui-grid-col-1">
                                 <p:outputLabel value="Amount: "/>
                             </div>
                             <div class="ui-grid-col-2">
@@ -65,17 +86,17 @@
                                                      pattern="###,###.###"/>
                                     <p:ajax event="blur"
                                             update="@this"
-                                            process="@this"/>
+                                            process="@this ,:#{p:component('clear')}, :#{p:component('submitButton')}"/>
                                 </p:inputText>
                             </div>
                         </div>
                         <div class="ui-grid-row">  
-                            <div class="ui-grid-col-2">
+                            <div class="ui-grid-col-1">
                                 <p:outputLabel value="Service: "/>
                             </div>
                             <div class="ui-grid-col-2">
                                 <p:selectOneMenu id="serviceType" 
-                                                 value="#{coopRewardsInputModel.serviceId}"
+                                                 value="#{coopRewardsInputModel.coopReServices}"
                                                  style="width: 185px"
                                                  required="true">
                                     <f:selectItem 
@@ -83,16 +104,16 @@
                                         itemValue="#{null}"/>
                                     <f:selectItems
                                         var="service"
-                                        value="#{coopRewardsServicesModel.coopReServices}"
-                                        itemValue="#{service[0]}"
-                                        itemLabel="#{service[1]}"/>
+                                        value="#{coopRewardsInputModel.coopReServices}"
+                                        itemValue="#{service.servicesId}"
+                                        itemLabel="#{service.servicesName}"/>
 
                                     <p:ajax event="change"
                                             process="@this"
                                             update="@this, "/>
                                     <p:ajax event="itemSelect"
                                             process="@this"
-                                            update="@this, "/>
+                                            update="@this,:#{p:component('submitButton')} "/>
                                 </p:selectOneMenu>
                             </div>
                         </div>
@@ -105,13 +126,34 @@
                                               icon="ui-icon-disk"
                                               styleClass="ui-btn ui-shadow ui-corner-all ui-btn-icon-left ui-icon-arrow-1-w"
                                               style="margin-right: 7px"
-                                              >
+                                              update="@this,:#{p:component('growl')}"
+                                              disabled="#{empty coopRewardsInputModel.accountNo and empty coopRewardsInputModel.amount }">
 
                             </p:commandButton>
+
+                            <div class="ui-grid-col-2">
+                                <p:commandButton  id="clear"
+                                                  value="Clear"
+                                                  actionListener="#{controllerCoopRewards.clear()}"
+                                                  icon=" ui-icon-arrowrefresh-1-w"
+                                                  styleClass="ui-btn ui-shadow ui-corner-all ui-btn-icon-left ui-icon-arrow-1-w"
+                                                  style="margin-right: 7px"
+                                                  update="@this,:#{p:component('growl')}"
+                                                  disabled="#{empty coopRewardsInputModel.accountNo}">
+
+                                </p:commandButton>
+
+                            </div>
+
                         </div>
-                        <!--disabled="#1{empty coopRewardsInputModel.accountNo && empty coopRewardsInputModel.serviceId && empty coopRewardsInputModel.amount }"-->
                     </p:panel>
                 </div>
+
+
+
+
+
+
 
             </h:form>
         </ui:define>
